# beepbop

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  HANDOFF.md  README.md  pyproject.toml
.gsk/skills/gsk-acp-agents/: SKILL.md
.gsk/skills/gsk-aidrive/: SKILL.md
.gsk/skills/gsk-analyze-media/: SKILL.md
.gsk/skills/gsk-audio-generation/: SKILL.md
.gsk/skills/gsk-audio-processing/: SKILL.md
.gsk/skills/gsk-audio-transcribe/: SKILL.md
.gsk/skills/gsk-claw-share-link/: SKILL.md
app/: __init__.py  app_settings.py  auth.py  config.py  db.py  gsk_client.py  main.py  matching.py  outreach.py  policy.py  scraper.py  scraper_core.py  seed.py  telegram_bot.py
data/: context.md  opportunities.json  schema.sql
demo-video/: ASSET_CREDITS.md  DESIGN.md  DEVFOLIO_MCP_UPDATE_PAYLOAD_DRAFT.json  DEVFOLIO_SUBMISSION_DRAFT_FOR_REVIEW.md  SUBMISSION_DRAFT_SNAPSHOT.md  SUBMISSION_NOTES.md  SUBMISSION_REWRITE_PROPOSAL.md  index.html  meta.json
demo-video/overlays/: bot-walkthrough-callouts.ass
docs/: ARCHITECTURE.md  DEMO.md  DEPLOY.md
issues/: 01-scaffold.md  02-seed.md  03-match-artifacts.md  04-telegram.md  05-email.md  06-calendar.md  07-policy.md  08-docs-submission.md  09-compliance.md  10-scraper-rewrite.md  11-closed-opps-pricing-advisor.md  12-cloud-memory-layer.md  README.md
scripts/: setup.sh  tunnel.sh
templates/: base.html  dashboard.html  login.html  opportunity.html  settings.html
tests/: conftest.py  test_db.py  test_health.py  test_matching.py  test_policy.py  test_prerequisites.py  test_scraper.py  test_seed.py  test_telegram.py
(+36 files in other folders)
