[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beepbop"
version = "0.1.0"
description = "GeBIZ opportunity scout for SMEs/creators/artists — scrapes, matches, generates pitch artifacts, routes approvals via Telegram, and executes outreach via Genspark Claw."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.39",
    "python-telegram-bot>=21.6",
    "playwright>=1.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
